import sys
from PySide6.QtWidgets import QApplication, QWidget
from ui_rrhh import Ui_Widget

class MyWidget(QWidget):
    def __init__(self):
        super().__init__()
        self.ui = Ui_Widget()
        self.ui.setupUi(self)

        # Conecta el botón 'Iniciar sesión' a una función (ejemplo)
        # Observa que el nombre del botón en tu UI es 'pushButton_1'
        self.ui.pushButton_1.clicked.connect(self.agregar_empleado)        
        self.ui.pushButton_2.clicked.connect(self.editar_empleado)
        self.ui.pushButton_3.clicked.connect(self.editar_empleado)
        self.ui.pushButton_4.clicked.connect(self.editar_empleado)
        self.ui.pushButton_5.clicked.connect(self.eliminar_empleado)
        self.ui.pushButton_6.clicked.connect(self.eliminar_empleado)
        self.ui.pushButton_7.clicked.connect(self.eliminar_empleado)

    def agregar_empleado(self):
        print(f"Intento de agrego de empleado")
        # Aquí puedes agregar la lógica de validación o conexión a base de datos.

    def editar_empleado(self):
            print(f"Intento para editar un empleado")
            # Aquí puedes agregar la lógica de validación o conexión a base de datos.

    def eliminar_empleado(self):
            print(f"Intento para eliminar un empleado")
            # Aquí puedes agregar la lógica de validación o conexión a base de datos.

if __name__ == "__main__":
    app = QApplication(sys.argv)
    window = MyWidget()
    window.show()
    sys.exit(app.exec())